@@ -153,7 +153,9 @@ runGhcid waiter restart command outputfiles test size titles output = do
 
     -- fire, given a waiter, the messages, and the warnings from last time
     let fire nextWait messages warnings = do
-            messages <- return $ filter (not . ignoreMessage) messages
+            let f m@Message{} = m{loadMessage = filter (not . ignoreMessageLine) $ loadMessage m}
+                f x = x
+            messages <- return $ map f $ filter (not . ignoreMessage) messages
 
             loaded <- map snd <$> showModules ghci
             let loadedCount = length loaded
@@ -212,6 +214,13 @@ ignoreMessage :: Load -> Bool
 ignoreMessage Message{loadSeverity=Warning, loadMessage=[_,x]}
     = x `elem` ["    -O conflicts with --interactive; -O ignored."]
 ignoreMessage _ = False
+
+-- | Ignore lines in messages that are pointless.
+ignoreMessageLine :: String -> Bool
+ignoreMessageLine x = any (`isPrefixOf` x) xs
+    where
+        xs = ["      except perhaps to import instances from"
+             ,"    To import instances alone, use: import "]
 
 
 -- | Given an available height, and a set of messages to display, show them as best you can.
