@@ -1,5 +1,6 @@
 Changelog for GHCiD
 
+    #44, abbreviate the redundant module import error
     #45, add an extra space before the ... message
     #42, always show the first error in full
     #43, work even if people use break-on-exception flags
